# Food-price-crawler

./: README.md  bhx.csv  prices.db  pyproject.toml  test.py  update_stores_geocode.py  urls.txt
common/: cdc.py
crawler/: json_fetch.py  run_crawl.py  single_fetch.py
crawler/stores/: base.py  bhx.py  cooponline.py  fetch_branches.py  run_products.py  run_stores.py
data/: bhx.html  bhx.txt  cities.json  coopmart.txt
db/: __init__.py  benchmark_geo.py  benchmark_textsearch.py  bhx.update.py  category_distribution.csv  coop_update.py  hehe  init.sql  init_db.py  merge_db.py  models.py  mongo_client.py  percentage_product_categories.py  postgres_gis.py
